# questiongen

./: .gitignore  .impeccable.md  .mcp.json  .prettierignore  AGENTS.md  ARCHITECTURE.md  LICENSE  PRODUCT.md  README.md  build.bat  build.sh  components.json  eslint.config.js  eslint.config.mjs  index.html  package.json  tsconfig.tsbuildinfo  tutorpanel-plan.md  update.sh  vite.config.ts
.jules/: bolt.md
.kilo/plans/: improve-performance-and-sync.md
docs/: README.md  SUMMARY.md  api-schemas.md  architecture.md  backend.md  build.md  contributing.md  frontend.md  lib.md  state.md  testing.md
docs/architecture/: SIMPLIFIED_ARCHITECTURE.md
docs/plans/: edit-ai-subtopics.md  fix-sketchpad.md  fullscreen-completion.md  improve-ttft.md  sketchpad-zoom.md
docs/specs/: edit-ai-subtopics.md  fullscreen-completion.md  improve-ttft.md  sketchpad-zoom-spec.md
scripts/: fix_invalid_escapes.py  pre-commit.sh  rewrite_imports_to_alias.py  version.ts
src/: App.css  App.tsx  AppContext.tsx  main.tsx  store.ts  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  test_latex_escape
src-tauri/android/: StylusIntegration.kt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: anki.rs  catalog.rs  cleanup.rs  command_terms.rs  constants.rs  deepseek_info.rs  difficulty.rs  envelope.rs  generation.rs  generation.rs.new  http_client.rs  json_input.rs  latex.rs  lib.rs  llm.rs  main.rs  models.rs  normalization.rs  openrouter.rs  openrouter_info.rs  parsing.rs  pdf.rs  persistence.rs  prompts.rs  quality.rs  schemas.rs  text_clean.rs  topic_normalize.rs
src-tauri/src/lib_parts/: commands.rs  generation.rs  part_a.rs  part_b.rs  part_c.rs  types.rs
src/components/: AiGenerateSubtopicsModal.tsx  ConflictResolutionDialog.tsx  EmptyState.tsx  LoadingScreen.tsx  MarkdownMath.tsx  QuestionQualityBadges.tsx  Sketchpad.tsx  SubtopicEditorModal.tsx  color-picker.tsx  mode-toggle.tsx  sketchpadUtils.ts  theme-provider.tsx
src/context/: FirebaseSyncContext.tsx  TimerBarContext.tsx
src/hooks/: useAppearanceSettings.ts  useCollapsibleHeight.ts  useDeepSeekInfo.ts  useGeneration.ts  useGeneratorSettings.ts  useLocalBackupExport.ts  useModelStats.ts  useQuestionTimer.ts  useTextSizeCssVars.ts  useTimer.ts
src/lib/: analytics-chart.tsx  app-utils.ts  batch-distribution.ts  color-helpers.ts  color-utils.ts  constants.ts  firebase-storage.ts  generation-orchestrator.ts  generation-variety.ts  generator-batch.ts  generator-helpers.ts  import-export.ts  index.ts  logger.ts  math-delimiter-migration.ts  math-normalization.ts  motion.ts  pdf-export.ts  persistence.ts  preset-utils.ts  question-cache.ts  randomization.ts  score-utils.ts  sketchpad-renderer.ts  spaced-repetition.ts  store-helpers.ts  tauri-invoke-error.ts  tauri-store.ts  token-estimation.ts  utils.ts  wrong-question.ts
src/shared/: difficulty-config.json  subtopic-catalog.json
src/store/: helpers.ts  index.ts  persistence.ts  sketchpad-sync.ts  tutor.ts  (+1 more)
study-designs/: 2022BiologySD.md  2023ChemistrySD.md  2023MathematicsSD.docx  2023MathematicsSD.md  2025PhysicalEducationStudyDesign.md  main.py  pyproject.toml
(+204 files in other folders)
