[package]
name = "questiongen"
version = "4.0.20"
description = "A tool to generate questions from text using AI models."
authors = ["flandolf"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "questiongen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
rustls-platform-verifier = "0.6"
base64 = "0.22"
tokio = { version = "1", features = ["macros", "fs"] }
futures-util = "0.3"
once_cell = "1.21"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-store = "2"
tauri-plugin-sharekit = { git = "https://github.com/Choochmeque/tauri-plugin-sharekit" }
rand = "0.10.1"
genanki-rs = "0.4"
regex = "1"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"

[profile.dev]
incremental = true
opt-level = 1
overflow-checks = false

[profile.release]
strip = "debuginfo"
codegen-units = 16
lto = "thin"
