[package]
name = "questiongen"
version = "5.0.0"
description = "A tool to generate questions from text using AI models."
authors = ["flandolf"]
rust-version = "1.82.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "questiongen_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "=2.11.0", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["webpki-roots", "http1", "ring", "native-tokio"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
bytes = "1"
base64 = "0.22"
tokio = { version = "1", features = ["macros", "fs"] }
futures-util = "0.3"
once_cell = "1.21"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-store = "2"
tauri-plugin-sharekit = { git = "https://github.com/Choochmeque/tauri-plugin-sharekit" }
rand = "0.10.1"
genanki-rs = "0.4"
regex = "1"
lopdf = "0.34"


[profile.dev]
incremental = true
opt-level = 1
overflow-checks = false

[profile.release]
strip = "debuginfo"
codegen-units = 16
lto = "thin"
